// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderLineItemRow/> render() should render with applied discount 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt="Alt"
        className="img"
        src={null}
      />
    </div>
    <div
      className="legend"
    >
      <div>
        <a
          className="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <small
          className="d-block text-muted"
        >
          <del>
            <ShopifyMoneyAmount
              amount="1.00"
              currencyCode="USD"
              negative={false}
              renderIfZero={true}
            />
          </del>
        </small>
        <DiscountPopover
          actionName="shopifyDuplicateOrder"
          currencyCode="USD"
          editable={true}
          id="applied-discount-line-item"
          label="item"
          max={1}
          onChange={[Function]}
          placement="bottom"
          value={
            Immutable.Map {
              "description": null,
              "value": "50.0",
              "title": "",
              "amount": "0.50",
              "value_type": "percentage",
            }
          }
        >
          <ShopifyMoneyAmount
            amount="0.50"
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </DiscountPopover>
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      min={1}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <strong
        className="mt-auto mb-auto mr-auto"
      >
        <ShopifyMoneyAmount
          amount="0.50"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
        />
      </strong>
      <Button
        className="delete focusable"
        color="link"
        onClick={[MockFunction]}
        tabIndex={0}
        tag="button"
        type="button"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </Button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render with product image 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt="Alt"
        className="img"
        src={null}
      />
    </div>
    <div
      className="legend"
    >
      <div>
        <a
          className="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <DiscountPopover
          actionName="shopifyDuplicateOrder"
          currencyCode="USD"
          editable={true}
          id="applied-discount-line-item"
          label="item"
          max={1}
          onChange={[Function]}
          placement="bottom"
          value={null}
        >
          <ShopifyMoneyAmount
            amount="1.00"
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </DiscountPopover>
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      min={1}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <strong
        className="mt-auto mb-auto mr-auto"
      >
        <ShopifyMoneyAmount
          amount="1.00"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
        />
      </strong>
      <Button
        className="delete focusable"
        color="link"
        onClick={[MockFunction]}
        tabIndex={0}
        tag="button"
        type="button"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </Button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render without product image 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt=""
        className="img"
        src="test-file-stub"
      />
    </div>
    <div
      className="legend"
    >
      <div>
        <a
          className="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <DiscountPopover
          actionName="shopifyDuplicateOrder"
          currencyCode="USD"
          editable={true}
          id="applied-discount-line-item"
          label="item"
          max={1}
          onChange={[Function]}
          placement="bottom"
          value={null}
        >
          <ShopifyMoneyAmount
            amount="1.00"
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </DiscountPopover>
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      min={1}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <strong
        className="mt-auto mb-auto mr-auto"
      >
        <ShopifyMoneyAmount
          amount="1.00"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
        />
      </strong>
      <Button
        className="delete focusable"
        color="link"
        onClick={[MockFunction]}
        tabIndex={0}
        tag="button"
        type="button"
      >
        <i
          className="material-icons"
        >
          close
        </i>
      </Button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render without quantity and without price 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt="Alt"
        className="img"
        src={null}
      />
    </div>
    <div
      className="legend"
    >
      <div>
        <a
          className="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <DiscountPopover
          actionName="shopifyDuplicateOrder"
          currencyCode="USD"
          editable={true}
          id="applied-discount-line-item"
          label="item"
          max={1}
          onChange={[Function]}
          placement="bottom"
          value={null}
        >
          <ShopifyMoneyAmount
            amount="1.00"
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </DiscountPopover>
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      min={1}
      onChange={[Function]}
      type="number"
      value={0}
    />
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <strong
        className="mt-auto mb-auto ml-auto"
      >
        <ShopifyMoneyAmount
          amount="0.00"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
        />
      </strong>
    </div>
  </td>
</tr>
`;
